[gd_scene load_steps=12 format=2]

[ext_resource path="res://Objects/MeteorCannon.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/RockMiniGame/heart.png" type="Texture" id=2]
[ext_resource path="res://Objects/ScissorSpaceship.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MiniGames/RockMiniGame.gd" type="Script" id=4]
[ext_resource path="res://Assets/Background/bg_rock.png" type="Texture" id=5]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "stars"
length = 2.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56.5, 322.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 554, 27 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.5, 314 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 794.5, 16 )

[node name="RockMiniGame" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 520.375, 299.25 )
scale = Vector2( 2.55073, 2.60652 )
texture = ExtResource( 5 )
hframes = 5
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "stars"
anims/RESET = SubResource( 5 )
anims/stars = SubResource( 6 )

[node name="Limits" type="Node2D" parent="."]

[node name="SpaceshipBounds" type="Node2D" parent="Limits"]

[node name="left" type="StaticBody2D" parent="Limits/SpaceshipBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/SpaceshipBounds/left"]
position = Vector2( -57, 292.5 )
shape = SubResource( 1 )

[node name="right" type="StaticBody2D" parent="Limits/SpaceshipBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/SpaceshipBounds/right"]
position = Vector2( 1082, 291 )
shape = SubResource( 1 )

[node name="up" type="StaticBody2D" parent="Limits/SpaceshipBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/SpaceshipBounds/up"]
position = Vector2( 522, -26 )
shape = SubResource( 2 )

[node name="down" type="StaticBody2D" parent="Limits/SpaceshipBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/SpaceshipBounds/down"]
position = Vector2( 517, 626 )
shape = SubResource( 2 )

[node name="MeteorBounds" type="Node2D" parent="Limits"]

[node name="left" type="StaticBody2D" parent="Limits/MeteorBounds"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/MeteorBounds/left"]
position = Vector2( -23, 284 )
shape = SubResource( 3 )

[node name="right" type="StaticBody2D" parent="Limits/MeteorBounds"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/MeteorBounds/right"]
position = Vector2( 1048, 296 )
shape = SubResource( 3 )

[node name="up" type="Area2D" parent="Limits/MeteorBounds"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/MeteorBounds/up"]
position = Vector2( 531, -121 )
shape = SubResource( 4 )

[node name="down" type="Area2D" parent="Limits/MeteorBounds"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/MeteorBounds/down"]
position = Vector2( 569, 720 )
shape = SubResource( 4 )

[node name="MeteorCannon" parent="." instance=ExtResource( 1 )]
position = Vector2( 514, 632 )

[node name="ScissorSpaceship" parent="." instance=ExtResource( 3 )]
position = Vector2( 282, 262 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="ScissorLives" type="Node2D" parent="."]

[node name="Heart" type="Sprite" parent="ScissorLives"]
position = Vector2( 40, 40 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Heart2" type="Sprite" parent="ScissorLives"]
position = Vector2( 100, 40 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Heart3" type="Sprite" parent="ScissorLives"]
position = Vector2( 160, 40 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="GameoverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Limits/MeteorBounds/up" to="." method="_on_up_area_entered"]
[connection signal="body_entered" from="Limits/MeteorBounds/up" to="." method="_on_up_body_entered"]
[connection signal="area_entered" from="Limits/MeteorBounds/down" to="." method="_on_up_area_entered"]
[connection signal="body_entered" from="Limits/MeteorBounds/down" to="." method="_on_up_body_entered"]
[connection signal="timeout" from="GameoverTimer" to="." method="_on_GameoverTimer_timeout"]
